--- a/resources/assets/sass/_main-area.scss
+++ b/resources/assets/sass/_main-area.scss
@@ -11,6 +11,12 @@
   .add-content{
 
   }
+  .create-new-folder{
+    border: none;
+    outline: 1px #cbcbcb solid;
+    height: 20px;
+    padding-left: 3px;
+  }
   .content-wrapper{
     height: 100%;
     overflow: hidden;
