add link active feature

--- a/resources/assets/sass/_explorer.scss
+++ b/resources/assets/sass/_explorer.scss
@@ -4,8 +4,8 @@
 }
 .file-structure{
   width:20%;
-  background: lightgray;
   overflow: scroll;
+  background: whitesmoke;
 }
 .main-area {
   background: whitesmoke;
